# Puppetmaster

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TALKING_POINTS.md  package.json  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: puppetmaster-workflow.mdc
.github/workflows/: ci.yml
assets/: hermes-support-slack.html  setup-guide-slack.html
bench/: README.md  __init__.py  codegraph_ab.py  codegraph_race.py  followup_cost.py  mcp_stress.py  router_live_ab.py  router_savings.py  stress_fable5_rollout.py  stress_invocation.py  stress_new_features.py  stress_streamed_adapters.py  three_way.py
bench/prompts/: example.txt
clients/typescript/: README.md  package.json  puppetmaster.ts  tsconfig.json
cursor-extension/: .vscodeignore  LICENSE  README.md  extension.cjs  package.json
docs/: ADAPTERS.md  ARCHITECTURE.md  CHANGELOG.md  CLAIMS.md  CLI_REFERENCE.md  CODEGRAPH.md  COMPARISON.md  COMPRESSION.md  CONTRIBUTING.md  CURSOR_AGENT_MCP.md  CURSOR_EXTENSION.md  DAILY_DRIVER.md  DASHBOARD.md  FEATURES.md  MOBILE.md  MODEL_ROUTING.md  OUTPUT_STYLE.md  PRODUCTION.md  PYPI_NAME_REQUEST.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  WHY.md  design_memory_hygiene.md  design_rqgm_evaluators.md  sample-anchor-set.json  sample-evaluator-registry.json  sample-models.json
docs/specs/: hermes-skill-injection.md
examples/: README.md  agentic-analyze.json  agentic-implement.json  claude-code-full-edit.json  cursor-dry-run-implementation.json  cursor-live.json  cursor-review.json  enterprise-workflow.json  memory-reuse.json
examples/transcripts/: crash-recovery.txt  enterprise-workflow.txt
puppetmaster/: README.md  __init__.py  __main__.py  adapters.py  affected.py  api_discovery.py  artifact_bounds.py  audit.py  bedrock.py  browser.py  browser_cdp.py  cancellation.py  cli.py  codegraph.py  codegraph_index_runner.py  codegraph_repair.py  codegraph_usage.py  config.py  conflicts.py  cost.py  cursor_discovery.py  cursor_sdk_runner.mjs  dashboard.py  diagnostics.py  eval_harness.py  evaluators.py  failure.py  fs_permissions.py  gates.py  hashline.py  hermes_spawn_tree.py  hook_installers.py  hook_runner.py  installers.py  invocation_gate.py  job_brief.py  lifecycle.py  liveness.py  mcp_registry.py  mcp_server.py  (+40 more)
puppetmaster/adapters/: __init__.py  _base.py  _context_budget.py  _delta_bus.py  _delta_stream.py  _facade.py  _git.py  _prompts.py  _streaming.py  agentic.py  claude_code.py  codex.py  cursor.py  hermes.py  local.py  openai.py  registry.py
puppetmaster/cli/: __init__.py  _dispatch.py  _parser.py  commands_codegraph.py  commands_evaluators.py  commands_gate.py  commands_install.py  commands_jobs.py  commands_keys.py  commands_mcp.py  commands_models.py  commands_platform.py  guidance.py  helpers.py
scripts/: README.md  demo.sh  demo.tape
tests/: conftest.py  hermetic_env.py  test_agentic_standalone.py  test_allowed_model_routing.py  test_artifact_bounds.py  test_bedrock_invoke_health.py  test_bedrock_stream.py  test_browser_cdp.py  test_codegraph_utf8.py  test_eval_harness.py  test_graph.py  test_hashline.py  test_hermetic_env.py  test_history_compaction.py  test_job_brief.py  test_mutation_fixtures.py  test_prewalk.py  test_process_tree.py  test_prompt_cache.py  test_prompt_prefix.py  test_provider_circuit.py  test_puppetmaster.py  test_role_routing_defaults.py  test_sqlite_connection.py  test_swarm_launch.py  test_tool_batch.py  test_tool_offload.py
(+9 files in other folders)
