[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "puppetmaster-ai"
version = "0.9.33"
description = "Gunicorn-style agent swarms with Redis-like shared memory and artifact stitching. (Imported as `puppetmaster`; published as `puppetmaster-ai` because the bare PyPI name is held by an abandoned 2019 project, name-reassignment pending.)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cary" }]
license = { file = "LICENSE" }
keywords = ["agents", "swarm", "orchestration", "cursor", "llm", "redis", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.optional-dependencies]
# Optional OpenTelemetry tracing. Without these, telemetry is a hard no-op and
# Puppetmaster stays zero-dependency; install only if you want swarm traces.
otel = [
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[project.urls]
Homepage = "https://github.com/professorpalmer/Puppetmaster"
Repository = "https://github.com/professorpalmer/Puppetmaster"
Changelog = "https://github.com/professorpalmer/Puppetmaster/blob/main/docs/CHANGELOG.md"
Issues = "https://github.com/professorpalmer/Puppetmaster/issues"
Releases = "https://github.com/professorpalmer/Puppetmaster/releases"

[project.scripts]
puppetmaster = "puppetmaster.cli:main"
puppetmaster-mcp = "puppetmaster.mcp_server:main"

[tool.setuptools.packages.find]
include = ["puppetmaster*"]
exclude = ["node_modules*", "docs*", "examples*", "tests*"]

[tool.setuptools.package-data]
# Ship the Node SDK runner alongside the Python package — the Cursor adapter
# and `models discover` resolve it via Path(__file__).with_name(...), so it
# MUST be in the wheel/sdist or pip-installed Cursor support is broken.
puppetmaster = ["*.mjs"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

